# sweetDealerDataEntry

./: .gitignore  manage.py  pyproject.toml  req.txt
core/: admin.py  changelists.py  constants.py  filters.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_item_current_quantity_alter_item_name_and_more.py  0004_alter_order_options_remove_item_ordered_quantity_and_more.py  0005_order_amount_paid.py  0006_billbook.py  0007_alter_billbook_dealer.py  0008_delete_billbook.py  0009_item_box_dispatched_1000_item_box_dispatched_500_and_more.py  0010_rename_delivered_order_dispatched_and_more.py  0011_order_dispatched_date_alter_order_amount_paid.py  0012_dispatchmodel.py
core/templates/admin/: input_filter.html
core/templates/order/: add.html  base.html  dispatch.html  edit.html  list_orders.html  login.html  total_summary.html
core/templatetags/: custom_filters.py
custom_auth/: admin.py  forms.py  models.py  resources.py
custom_auth/migrations/: 0001_initial.py  0002_customuser_books.py  0003_remove_customuser_books.py  0004_customuser_books.py  0005_customuser_amount_received.py  0006_customuser_total_amount.py  0007_remove_customuser_amount_received_userdeposit.py  0008_userdeposit_description.py
export/: excel.py
sweetDealerNew/: asgi.py  settings.py  urls.py  wsgi.py
